--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,11 +8,11 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+#play.crypto.secret = "changeme"
 
 # The application languages
 # ~~~~~
-play.i18n.langs = [ "en" ]
+#play.i18n.langs = [ "en" ]
 
 # Router
 # ~~~~~
@@ -42,3 +42,14 @@ play.i18n.langs = [ "en" ]
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+# akka configuration
+akka {
+  loglevel = "DEBUG"
+  
+# enable the Slf4jLogger. Para que ande también hay que agregar la dependencia a ["com.typesafe.akka" %% "akka-slf4j" % "2.4.4"] en el libraryDependencies de los proyectos akka que el logger lo usen.	
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  
+# filter the log events using the back-end configuration (e.g. logback.xml) before they are published to the event bus.
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
