--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "system",
+    "moduleResolution": "node",
     /* the following two settings are required for angular2 annotations to work*/
     "emitDecoratorMetadata": true,
     "experimentalDecorators":true,
@@ -14,11 +15,15 @@
     "noImplicitAny":true,
     "noFallthroughCasesInSwitch":true,
     "noImplicitReturns":true,
-    "outDir": "./target/ts"
+    "outDir": "./target/web/typescript",
+    "listFiles": true,
+    "pretty": true
   },
   /* the information below is not used by sbt-typescript. but you can use it if you want to run tsc -p .*/
   "exclude": [
     "node_modules",
+    "src/main/node_modules",
+    "src/test/node_modules",
     "project/target",
     "typings/main",
     "typings/main.d.ts",
