--- a/activator.properties
+++ b/activator.properties
@@ -1,7 +1,5 @@
-name=play-angular2-typescript
-title=Angular2 Typescript application with Play
-description=A Play Angular2 starter application with incremental Typescript compilation.
-tags=playframework,angular2,typescript,scala
-authorTwitter=jouke
-authorLogo=https://avatars.githubusercontent.com/u/1859426?v=3
-authorName=Joost de Vries
+name=akkaHttp-angular2-typescript
+title=Angular2 Typescript application with akka-http
+description=A akka-http Angular2 starter application with incremental Typescript compilation.
+tags=akka-http,angular2,typescript,scala
+authorTwitter=@gustzer
