Replace client side application with the angular quick start tutorial.

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,1 +1,4 @@
+#Activator-generated Properties
+#Sun May 15 12:38:35 GMT-03:00 2016
+template.uuid=171e774a-ec4d-4029-bac4-adadecc96f51
 sbt.version=0.13.11
